--- a/card.html
+++ b/card.html
@@ -7,18 +7,23 @@
     <link rel="stylesheet" href="css/card.css" />
 </head>
 <body>
+<!-- HEADER -->
 <header><h1>Take a Card!<h1></h1></header>
 <div class="card">
-    
+    <!-- WRAP PHOTO WITH NAME AND POSITION -->
     <div class="photo-wrap">
         <div class="name"><h3>Justin Smith</h3></div>
-        <div class="photo"><img src="img/justin.jpg" alt="An artistic pic of Justin"/></div> 
-        <div class="position"><p>Front-End Developer</p></div></div>
-
-    <div class="profile"><p>Current student of front-end web dev.  Also, one amazing janitor.</p></div>
-     
-</div> 
+        <div class="photo"><img src="img/justin.jpg" alt="An artistic pic of Justin"/></div>
+        <div class="position"><p>Front-End Developer</p></div>
+    </div>
+    <!-- PROFILE DESCRIPTION -->
+    <div class="profile"><p>A Udacity student pursuing front-end web dev.  Not to mention, one classy janitor and quite a sound guy.</p><br>
+        <!-- BUTTON -->
+        <a class="button" href="https://heysoundguy.wordpress.com/" target="_blank">Hey Sound Guy!</a>
+    </div>
 </div>
-<footer class="footer"><a href="index.html"><h2>Back to Blog</h2></a> 
+</div>
+<!-- FOOTER -->
+<footer class="footer"><a href="index.html"><h2>Back to Blog</h2></a>
 </footer>
 </body>
