--- a/index.html
+++ b/index.html
@@ -8,32 +8,35 @@
 </head>
 <body>
     <div class="grid-container">
-        <header class="header"><h1>Justin Smith's Blog</h1> 
+        <header class="header"><h1>Justin Smith's Blog</h1>
         </header>
-        <main class="main"><date class="date">February 17, 2020: </date>Putting final touches on my Personal Blog Website.  The struggle is real.  This seems like it should be so easy.  The puzzle pieces are coming together and sinking into my brain slowly but surely!
-        <!-- Link to card page --><br><br><br><br>
+        <main class="main"><date class="date">February 17, 2020: </date>Putting final touches on this Blog Website.  The puzzle pieces are coming together and sinking into my brain slowly but surely!
+        <!-- Link to card page -->
             <div>
-                <a class="card-link" href="card.html">Click here to get to know me!</a>    
+                <a class="card-link" href="card.html"><p>Click here to get to know me!</p></a>
             </div>
         </main>
-        <div class="side-bar"><figure class="robot-container">
-            <a href="img/robot.jpg"><img src="img/robot.jpg" class="robot" alt="Childhood drawing of robot."></a>
-            <figcaption>A prophetic self-portrait created by Justin in Kindergarten.  This amazing piece of historic artwork was done using a rare exotic method only known by a very remote few.</figcaption>
-        </figure></div>
-        <footer class="footer"><strong> Get in touch!</strong>
-            <section id="icon-container"> 
-                <a class="social-link" href="https://twitter.com/justin111smith">
-                    <img src="https://img.icons8.com/officel/2x/twitter.png" alt="Twitter">
-                </a>
-                <a class="social-link" id="instagram" href="https://www.instagram.com/justin111smith/">
-                    <img src="https://www.se.com/us/en/assets/739/media/53390/560/Icon-instagram-IC-160x160.jpg" alt="Instagram">
-                </a>
-                <a class="social-link" href="https://www.facebook.com/justin111smith">
-                    <img src="https://img.icons8.com/officel/2x/facebook-new.png" alt="YouTube">
-                </a>
-            </section>
-            
-        </footer>
+        <div class="side-bar">
+            <figure class="robot-container">
+                <a href="img/robot.jpg"><img src="img/robot.jpg" class="robot" alt="Childhood drawing of robot."></a>
+                    <figcaption class="figcaption">A prophetic self-portrait created by Justin in Kindergarten.  This amazing piece of historic artwork was done using a rare exotic method only known by a very remote few.
+                    </figcaption>
+            </figure>
+        </div>
+        <!-- FOOTER -->
+    <footer class="footer"><strong> Get in touch!</strong>
+        <section id="icon-container">
+            <a class="social-link" href="https://twitter.com/justin111smith">
+                <img src="https://img.icons8.com/officel/2x/twitter.png" alt="Twitter">
+            </a>
+            <a class="social-link" id="instagram" href="https://www.instagram.com/justin111smith/">
+                <img src="https://www.se.com/us/en/assets/739/media/53390/560/Icon-instagram-IC-160x160.jpg" alt="Instagram">
+            </a>
+            <a class="social-link" href="https://www.facebook.com/justin111smith">
+                <img src="https://img.icons8.com/officel/2x/facebook-new.png" alt="YouTube">
+            </a>
+        </section>
+    </footer>
     </div>
 </body>
 </html>
