--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div class="grid-container">
-        <header class="header"><h1>Justin Smith's Blog</h1>
+        <!-- HEADER -->
+        <header class="header">
+            <!-- NAVBAR -->
+            <ul id="nav-bar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="card.html">About Me</a></li>
+            <li><a href="https://heysoundguy.wordpress.com/">Services</a></li>
+          </ul>
+        
         </header>
         <main class="main"><date class="date">February 17, 2020: </date>Putting final touches on this Blog Website.  The puzzle pieces are coming together and sinking into my brain slowly but surely!
         <!-- Link to card page -->
