--- a/card.html
+++ b/card.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 <!-- HEADER -->
+<header class="header">
+    <!-- NAVBAR -->
+    <ul id="nav-bar">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="card.html">About Me</a></li>
+    <li><a href="https://heysoundguy.wordpress.com/">Services</a></li>
+  </ul>
 <header><h1>Take a Card!<h1></h1></header>
 <div class="card">
     <!-- WRAP PHOTO WITH NAME AND POSITION -->
